module secratary side

--- a/Front/src/app/features/screens/secretary/show-request-secretary/show-request-secretary.component.html
+++ b/Front/src/app/features/screens/secretary/show-request-secretary/show-request-secretary.component.html
@@ -1,3 +1,9 @@
+<div *ngIf="pageIsLoad" class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
+  <i class="spinner-grow spinner-grow-sm"></i>
+  <span class="m-1">Loading...</span>
+</div>
+
+
 <div class="invoice">
   <div class="invoice-print">
     <div class="row">
@@ -18,7 +24,7 @@
             <tr>
               <td>{{ userData?.nom }}</td>
               <td>{{ userData?.matricule }}</td>
-              <td>{{ utils?.getRequestPatternById(request.request_pattern_id , request) }}</td>
+              <td>{{ request.title  }}</td>
               <td>{{ request.created_at | date: 'dd-MM-yyyy' }}</td>
             </tr>
           </table>
@@ -45,7 +51,7 @@
   <div class="row mt-4">
     <div class="col-md-12">
       <p class="section-lead"><span
-        style="font-weight: bold;">Objet  :</span> {{ utils?.getRequestPatternById(request.request_pattern_id , request) }}</p><br>
+        style="font-weight: bold;">Objet  :</span> {{  request.title  }}</p><br>
       <p class="section-lead"><span style="font-weight: bold;">Intitulé : </span> {{ request?.title }} <br></p>
       <p class="section-lead"><span style="font-weight: bold;">Contenu : </span> {{ request?.content }} <br></p>
       <div class="row mt-4">
@@ -78,9 +84,11 @@
       </c-alert>
       <div class="float-lg-left mb-lg-0 mb-3">
           <button class="btn btn-success" (click)="transferringRequest()" style="font-size: 12px;">
-           Transferer
+            <span *ngIf="isLoading1" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+            Transferer
           </button>&nbsp;&nbsp;
           <button class="btn btn-danger" (click)="rejectRequest()" style="font-size: 12px;">
+            <span *ngIf="isLoading2" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
             Rejeter
           </button>
         </div>
