--- a/Front/src/app/features/screens/secretary/view-deadlines/view-deadlines.component.html
+++ b/Front/src/app/features/screens/secretary/view-deadlines/view-deadlines.component.html
@@ -1,3 +1,9 @@
+<div *ngIf="pageIsLoad" class="fade show" style="text-align: center; padding-top: calc(100vh / 2); height: 100vh">
+  <i class="spinner-grow spinner-grow-sm"></i>
+  <span class="m-1">Loading...</span>
+</div>
+
+
 <div class="col-12">
   <div class="card">
     <div class="card-header">
@@ -49,13 +55,13 @@
 
 
 <div class="col-12 mt-5" *ngIf="selectedUe">
-<!--  <c-alert [(visible)]="visible"-->
-<!--           [dismissible]="dismissible"-->
-<!--           color="{{color}}"-->
-<!--           fade-->
-<!--           *ngIf="visible">-->
-<!--    <strong>{{ message }}</strong>-->
-<!--  </c-alert>-->
+  <c-alert [(visible)]="visible"
+           [dismissible]="dismissible"
+           color="{{color}}"
+           fade
+           *ngIf="visible">
+    <strong>{{ message }}</strong>
+  </c-alert>
   <div class="card">
     <div class="card-header">
       <h5>Modification des delais pour l'ue {{selectedUe.code_ue}}</h5>
@@ -92,7 +98,9 @@
             </div>
           </div>
         </div>
-        <button type="submit" class="btn btn-primary" [disabled]="!editForm.valid">Mettre a jour
+        <button type="submit" class="btn btn-primary" [disabled]="!editForm.valid">
+          <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+          Mettre a jour
         </button>
       </form>
     </div>
