--- a/Front/src/app/features/screens/secretary/add-deadline/add-deadline.component.html
+++ b/Front/src/app/features/screens/secretary/add-deadline/add-deadline.component.html
@@ -77,6 +77,7 @@
             <div class="col-sm-12 col-md-7">
               <button type="submit" class="btn btn-primary" [disabled]="!addDeadlineForm.valid"
                       style="font-size: 12px;">
+                <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                 Ajouter
               </button>
             </div>
