--- a/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
+++ b/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
@@ -28,7 +28,7 @@
                       <td>{{ request.content.substring(0 , 8) }} .....</td>
                       <td>{{ request.sender.matricule }}</td>
                       <td>{{ request.attachments.length }}</td>
-                      <td>{{ request.created_at | dateFormat }}</td>
+                      <!-- <td>{{ request.created_at | dateFormat }}</td> -->
                       <td>
                         <button cButton class="me-1" color="primary" (click)="showRequest(request.id)" style="font-size: 12px;">Details</button>
                       </td>
@@ -41,7 +41,6 @@
           </div>
         </div>
       </div>
-    </div>
   </section>
 </section>
 
