--- a/Front/src/scss/styles.scss
+++ b/Front/src/scss/styles.scss
@@ -23,4 +23,4 @@ $enable-rtl: true;
 @import "custom";
 
 /* Importing Bootstrap SCSS file. */
-@import 'bootstrap/scss/bootstrap';
+// @import 'bootstrap/scss/bootstrap';
