--- a/Front/src/app/features/screens/profil/profil.component.html
+++ b/Front/src/app/features/screens/profil/profil.component.html
@@ -1,55 +1,75 @@
-<div class="card">
-    <div class="card-header">
-      <h4>Personal Details</h4>
+<div class="container-xl px-4 mt-4">
+  <hr class="mt-0 mb-4">
+  <div class="row">
+    <div class="col-lg-6">
+      <!-- Change password card-->
+      <div class="card mb-4">
+        <div class="card-header">Change Password</div>
+        <div class="card-body">
+          <form>
+            <!-- Form Group (current password)-->
+            <div class="mb-3">
+              <label class="small mb-1" for="currentPassword">Current Password</label>
+              <input class="form-control" id="currentPassword" type="password" placeholder="Enter current password">
+            </div>
+            <!-- Form Group (new password)-->
+            <div class="mb-3">
+              <label class="small mb-1" for="newPassword">New Password</label>
+              <input class="form-control" id="newPassword" type="password" placeholder="Enter new password">
+            </div>
+            <!-- Form Group (confirm password)-->
+            <div class="mb-3">
+              <label class="small mb-1" for="confirmPassword">Confirm Password</label>
+              <input class="form-control" id="confirmPassword" type="password" placeholder="Confirm new password">
+            </div>
+            <button class="btn btn-primary" type="button">Save</button>
+          </form>
+        </div>
+      </div>
+      <!-- Security preferences card-->
+      <div class="card mb-4">
+        <div class="card-header">Security Preferences</div>
+        <div class="card-body">
+          <!-- Account privacy optinos-->
+          <h5 class="mb-1">Account Privacy</h5>
+          <p class="small text-muted">By setting your account to private, your profile information and posts will not be
+            visible to users outside of your user groups.</p>
+          <hr class="my-4">
+          <!-- Data sharing options-->
+          <h5 class="mb-1">Data Sharing</h5>
+          <p class="small text-muted">Sharing usage data can help us to improve our products and better serve our users
+            as they navigation through our application. When you agree to share usage data with us, crash reports and
+            usage analytics will be automatically sent to our development team for investigation.</p>
+        </div>
+      </div>
     </div>
-    <div class="card-body">
-      <div class="py-4">
-        <p class="clearfix">
-          <span class="float-left">
-            Birthday
-          </span>
-          <span class="float-right text-muted">
-            30-05-1998
-          </span>
-        </p>
-        <p class="clearfix">
-          <span class="float-left">
-            Phone
-          </span>
-          <span class="float-right text-muted">
-            (0123)123456789
-          </span>
-        </p>
-        <p class="clearfix">
-          <span class="float-left">
-            Mail
-          </span>
-          <span class="float-right text-muted">
-            testexample.com
-          </span>
-        </p>
-        <div class="form-group form-floating mt-3 d-flex flex-column">
-            <input type="password" pInputText formControlName="password" class="form-control"
-                   placeholder="reinitialiser le mot de passe" id="" name="">
-            <label for="floatingPassword">reinitialiser le mot de passe<span class="text-danger">*</span></label>
-            <!-- <div class="d-flex align-content-start text-danger">
-              <div >Password is required</div>
-            </div> -->
-          </div>
-          <div class="form-group form-floating mt-3 d-flex flex-column">
-            <input type="password" pInputText formControlName="password" class="form-control"
-                   placeholder="reinitialiser le mot de passe" id="" name="">
-            <label for="floatingPassword">confirmer le mot de passe<span class="text-danger">*</span></label>
-            <!-- <div class="d-flex align-content-start text-danger">
-              <div >Password is required</div>
-            </div> -->
-          </div>
-          <div class="form-group  mt-3 ">
-            <button cButton type="submit" class="btn btn px-4 btn-pill btn-block" style="background-color:black; color: white;"
-                   >Reinitialiser
-            </button>
-          </div>
+    <div class="col-lg-6">
+      <!-- Two factor authentication card-->
+      <div class="card mb-4">
+        <div class="card-header">Change Profile</div>
+        <div class="card-body">
+          <form>
+            <div class="mb-3">
+              <label class="small mb-1" for="name">Your name</label>
+              <input class="form-control" id="name" type="text" placeholder="Enter name">
+            </div>
+            <div class="mb-3">
+              <label class="small mb-1" for="email">Email</label>
+              <input class="form-control" id="email" type="email" placeholder="Enter email">
+            </div>
+            <button class="btn btn-primary" type="button">Save</button>
+          </form>
+        </div>
+      </div>
+      <!-- Delete account card-->
+      <div class="card mb-4">
+        <div class="card-header">Delete Account</div>
+        <div class="card-body">
+          <p>Deleting your account is a permanent action and cannot be undone. If you are sure you want to delete your
+            account, select the button below.</p>
+          <button class="btn btn-danger-soft text-danger" type="button">I understand, delete my account</button>
+        </div>
       </div>
     </div>
   </div>
- 
+</div>
