--- a/Front/src/scss/styles.scss
+++ b/Front/src/scss/styles.scss
@@ -24,3 +24,5 @@ $enable-rtl: true;
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+@import '@fortawesome/fontawesome-free/css/all.css';
+@import 'mdb-angular-ui-kit/assets/scss/mdb.scss';
