--- a/Front/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/Front/src/app/containers/default-layout/default-header/default-header.component.html
@@ -65,7 +65,7 @@
         <hr cDropdownDivider/>
       </li>
       <li style="background-color: red">
-        <span routerLink="./" (click)="logout()" cDropdownItem class="logout-item">
+        <span (click)="logout()" cDropdownItem class="logout-item">
           <svg cIcon class="me-2" name="cilLockLocked"></svg>
           Deconnexion
         </span>
