user profile side

--- a/Front/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/Front/src/app/containers/default-layout/default-header/default-header.component.html
@@ -56,9 +56,9 @@
       </li>
       <li></li>
       <li>
-        <a cDropdownItem>
+        <a cDropdownItem (click)="showLanguageAlert()">
           <svg cIcon class="me-2" name="cilSettings"></svg>
-          langue
+          Language
         </a>
       </li>
       <li>
