--- a/Front/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/Front/src/app/containers/default-layout/default-header/default-header.component.html
@@ -33,11 +33,10 @@
       size="md"
       src="./assets/img/avatar.png"
       status="success"
-      style="  width: 50px;
-        height: 50px;
+      style="  width: 60px;
+        height: 60px;
         border-radius: 50%;
-        overflow: hidden;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);"
+        overflow: hidden;"
       cDropdownToggle
     >
     </c-avatar>
@@ -64,7 +63,7 @@
       <li>
         <hr cDropdownDivider/>
       </li>
-      <li style="background-color: red">
+      <li style="background-color: rgb(70, 70, 70)">
         <span (click)="logout()" cDropdownItem class="logout-item">
           <svg cIcon class="me-2" name="cilLockLocked"></svg>
           Deconnexion
