--- a/Front/src/app/features/screens/acceuil/acceuil/acceuil.component.html
+++ b/Front/src/app/features/screens/acceuil/acceuil/acceuil.component.html
@@ -39,10 +39,10 @@
                 <h1 data-aos="fade-up" data-aos-delay="200">Explorez Nous</h1>
                 <h1 data-aos="fade-up" data-aos-delay="100">Transformez vos requêtes en actions avec facilité grâce à
                   EasyRequest</h1>
-                <p data-aos="fade-up" data-aos-delay="300">Du problème à la solution, une requête à la fois.</p><br>
+                <p data-aos="fade-up" data-aos-delay="300" style="color: white;">Du problème à la solution, une requête à la fois.</p><br>
                 <a routerLink="/login" data-aos-delay="200" data-aos="fade-up" class="btn btn-primary pills"
-                   style="background-color: rgb(10, 10, 11); border: none; padding: 15px 22px;">
-                  <i class="material-icons" style="font-size: 24px; vertical-align: middle; margin-right: 10px;">exit_to_app</i>
+                   style="background-color: rgb(4, 4, 4); border: none; padding: 15px 22px;">
+                  <i class="material-icons" style="font-size: 24px; vertical-align: middle; margin-right: 10px;"></i>
                   <span style="font-size: 18px; vertical-align: middle;">Se connecter</span>
                 </a>
 
@@ -91,7 +91,7 @@
             <span class="custom-icon-inner mr-3"
             ><span class="icon icon-university"></span
             ></span>
-            <div><h3 class="m-0">universite de yaounde I</h3></div>
+            <div><h3 class="m-0" style="color: black;">universite de yaounde I</h3></div>
           </div>
         </div>
       </div>
@@ -117,7 +117,7 @@
             <span class="custom-icon-inner mr-3"
             ><span class="icon icon-university"></span
             ></span>
-            <div><h3 class="m-0">universite de yaounde I</h3></div>
+            <div><h3 class="m-0" style="color: black;" >universite de yaounde I</h3></div>
           </div>
         </div>
       </div>
@@ -154,9 +154,9 @@
               <div class="form-group row mb-2">
                 <label class="col-form-label text-md-right col-12 col-md-3 col-lg-3"></label>
                 <div class="col-sm-12 col-md-7">
-                  <button type="submit"  class="btn btn-primary rounded-2"
+                  <button type="submit"  class="btn  rounded-2"
                           value="Subscribe"
-                          style="background-color: rgb(10, 10, 11); border: none; padding: 15px 22px;" [disabled]="!newsletterForm.valid"  style="font-size: 12px;">Soumettre</button>
+                          style="background-color: black;color:white; border: none; padding: 15px 22px;font-size: 12px;" >Soumettre</button>
                 </div>
               </div>
 
