--- a/Front/src/app/containers/default-layout/default-layout.component.html
+++ b/Front/src/app/containers/default-layout/default-layout.component.html
@@ -8,15 +8,9 @@
   <c-sidebar-brand
     [brandFull]="{
       src: 'assets/img/easy-request.png',
-      width: 150,
-      height: 45,
+      width: 160,
+      height: 50,
       alt: 'Easy Request Logo',
-    }"
-    [brandNarrow]="{
-      src: 'assets/img/brand/coreui-signet-white.svg',
-      width: 46,
-      height: 46,
-      alt: 'Easy Request'
     }"
     routerLink="./"
   />
@@ -35,11 +29,11 @@
 </c-sidebar>
 
 <!--main-->
-<div class="wrapper d-flex flex-column min-vh-100 bg-light dark:bg-transparent">
+<div class="wrapper d-flex flex-column min-vh-100 bg">
   <!--app-header-->
-  <app-default-header class="mb-4 d-print-none header header-sticky" position="sticky" sidebarId="sidebar"/>
+  <app-default-header class="mb-3 d-print-none header header-sticky" position="sticky" sidebarId="sidebar"/>
   <!--app-body-->
-  <div class="body flex-grow-1 px-3">
+  <div class="body flex-grow-1 px-2">
 
     <c-container breakpoint="lg" class="h-auto">
       <router-outlet></router-outlet>
