--- a/Front/src/app/views/pages/login/login.component.html
+++ b/Front/src/app/views/pages/login/login.component.html
@@ -2,7 +2,7 @@
 
   <div class="slide-1"
        style="background-image: url('../../../assets/img/pexels-charlotte-may-5965930.jpg'); height: auto;">
-    <div class="container" style="max-width: 600px; padding: 0;">
+    <div class="container" style="max-width: 600px; padding: 10px; ">
       <div class="row align-items-center">
         <div class="col-12">
           <div class="row align-items-center">
