--- a/Front/src/assets/asset/css/style.css
+++ b/Front/src/assets/asset/css/style.css
@@ -223,7 +223,7 @@ h1, h2, h3, h4, h5,
       bottom: 0;
       z-index: 0;
       width: 100%;
-      background: rgba(0, 0, 0, 0.7); }
+      background: rgba(0, 0, 0, 0.868); }
   .bg-image > .container {
     position: relative;
     z-index: 1; }
@@ -657,8 +657,8 @@ h1, h2, h3, h4, h5,
     position: absolute;
     height: 100%;
     width: 100%;
-    background: #28292a;
-    opacity: .9;
+    background: #121212;
+    opacity: .10;
     border-bottom-right-radius: 0px; }
     @media (max-width: 991.98px) {
       .slide-1:before {
