updated bug on dashboard

--- a/Front/src/app/views/pages/login/login.component.html
+++ b/Front/src/app/views/pages/login/login.component.html
@@ -46,11 +46,17 @@
                     Se Connecter
                   </button>
                 </div>
+                <div class="text-center mt-3">
+                  <span>Vous n'avez pas de compte ?</span>
+                  <a routerLink="/register" class="ml-1">Créez-en un !</a>
+                </div>
               </form>
 
             </div>
+
           </div>
         </div>
+
       </div>
     </div>
   </div>
