--- a/Front/src/app/views/pages/page404/page404.component.html
+++ b/Front/src/app/views/pages/page404/page404.component.html
@@ -16,6 +16,9 @@
           <input cFormControl placeholder="What are you looking for?" type="text" />
           <button cButton color="info">Search</button>
         </c-input-group>
+        <div class="clearfix align-content-center">
+          <h4 class="pt-3">Back to <a href="/home">home</a> </h4>
+        </div>
       </c-col>
     </c-row>
   </c-container>
