--- a/Front/src/app/features/screens/secretary/show-request-secretary/show-request-secretary.component.html
+++ b/Front/src/app/features/screens/secretary/show-request-secretary/show-request-secretary.component.html
@@ -41,7 +41,7 @@
           <div class="col-md-6 text-md-right">
             <address>
               <strong>Order Date:</strong><br/>
-              Yaounde le {{ request.created_at | date: 'dd/MM/yyyy' }}<br/><br/>
+              Yaounde le {{ request.created_at | date: 'dd-MM-yyyy' }}<br/><br/>
             </address>
           </div>
         </div>
@@ -59,11 +59,11 @@
           <h6 style="font-weight: bold;">Pièces jointes</h6><br>
           <ng-container *ngIf="request.attachments && request.attachments.length > 0; else noAttachments">
             <p class="section-lead" *ngFor="let attachment of request.attachments; let i = index">
-              <button type="button" class="btn btn-info" data-toggle="tooltip" data-placement="top"
-                      title="Voir la piece jointe.">
-                <a [href]="redirectLink?.getAttachmentUrl(attachment.file_path)" target="_blank"
-                   style="color: white;text-decoration: none; ">Pièce {{ i + 1 }}</a>
-              </button>
+              <!-- Utiliser un lien stylisé comme un bouton -->
+              <a class="btn btn-info" [href]="redirectLink?.getAttachmentUrl(attachment.file_path)" target="_blank" role="button" data-toggle="tooltip" data-placement="top" title="Voir la pièce jointe">
+                Pièce {{ i + 1 }}
+              </a>
+
             </p>
           </ng-container>
 
