--- a/Front/src/app/features/screens/staff/show-request/show-request.component.html
+++ b/Front/src/app/features/screens/staff/show-request/show-request.component.html
@@ -40,7 +40,7 @@
           <div class="col-md-6 text-md-right">
             <address>
               <strong>Order Date:</strong><br/>
-              Yaounde le {{ request.created_at | date: 'dd/MM/yyyy' }}<br/><br/>
+              Yaounde le {{ request.created_at | date: 'dd-MM-yyyy' }}<br/><br/>
             </address>
           </div>
         </div>
