--- a/Front/src/app/features/screens/student/list-request/list-request.component.html
+++ b/Front/src/app/features/screens/student/list-request/list-request.component.html
@@ -45,7 +45,7 @@
               {{ request.statut }}
             </div>
           </td>
-          <td>{{ request.created_at | date: 'dd/MM/yyyy' }}</td>
+          <td>{{ request.created_at | date: 'dd-MM-yyyy' }}</td>
 
           <td>
             <button cButton class="me-1" color="primary" (click)="showRequest(request.id)" style="font-size: 12px;">
