--- a/Front/src/app/features/screens/student/show-request-student/show-request-student.component.html
+++ b/Front/src/app/features/screens/student/show-request-student/show-request-student.component.html
@@ -24,9 +24,9 @@
         <tr *ngFor="let entry of historyResponse">
 
           <td>{{ student.name }}</td>
-          <td>{{ entry.created_at | date:'yyyy/MM/dd' }}</td>
+          <td>{{ entry.created_at | date:'dd-MM-yyyy' }}</td>
           <td>{{entry.modify_by}}</td>
-          <td>{{ entry.created_at | date:'hh:mm a' }}</td>
+          <td>{{ entry.created_at | date:'dd-MM-yyyy' }}</td>
           <td>
             <div [ngClass]="{
                   'badge': true,
