--- a/Front/src/app/views/pages/register/register.component.html
+++ b/Front/src/app/views/pages/register/register.component.html
@@ -1,41 +1,66 @@
-<div class="bg-light min-vh-100 d-flex flex-row align-items-center">
-  <c-container>
-    <c-row class="justify-content-center">
-      <c-col lg="7" md="9" xl="6">
-        <c-card class="mx-4">
-          <c-card-body class="p-4">
-            <form cForm>
-              <h1>Register</h1>
-              <p class="text-medium-emphasis">Create your account</p>
-              <c-input-group class="mb-3">
-                <span cInputGroupText>
-                  <svg cIcon name="cilUser"></svg>
-                </span>
-                <input autoComplete="name" cFormControl placeholder="Username" />
-              </c-input-group>
-              <c-input-group class="mb-3">
-                <span cInputGroupText>&#64;</span>
-                <input autoComplete="email" cFormControl placeholder="Email" />
-              </c-input-group>
-              <c-input-group class="mb-3">
-                <span cInputGroupText>
-                  <svg cIcon name="cilLockLocked"></svg>
-                </span>
-                <input autoComplete="new-password" cFormControl placeholder="Password" type="password" />
-              </c-input-group>
-              <c-input-group class="mb-4">
-                <span cInputGroupText>
-                  <svg cIcon name="cilLockLocked"></svg>
-                </span>
-                <input autoComplete="new-password" cFormControl placeholder="Repeat password" type="password" />
-              </c-input-group>
-              <div class="d-grid">
-                <button cButton color="success">Create Account</button>
-              </div>
-            </form>
-          </c-card-body>
-        </c-card>
-      </c-col>
-    </c-row>
-  </c-container>
+<div class="intro-section" id="home-section">
+  <div class="slide-1" style="background-image: url('../../../assets/img/pexels-charlotte-may-5965930.jpg'); height: auto;">
+    <div class="container" style="max-width: 600px; padding: 10px;">
+      <div class="row align-items-center">
+        <div class="col-12">
+          <div class="row align-items-center">
+            <div class="col-lg-12 text-center mb-4">
+              <c-alert [(visible)]="visible" [dismissible]="dismissible" color="danger" fade *ngIf="visible">
+                <strong>{{ errorMessage }}</strong>
+              </c-alert>
+              <form action="liste_requete3" method="post" readonly="" [formGroup]="signupForm" (ngSubmit)="signup()" class="form-box">
+                <h3 class="h4 text-black mb-4" style="font-weight: bold;">Inscription</h3>
+                <div class="form-group form-floating mt-3 d-flex flex-column">
+                  <input type="text" pInputText formControlName="name" class="form-control custom-input" placeholder="Votre Nom" id="floatingInput" name="name">
+                  <label for="floatingInput">Nom Complet<span class="text-danger">*</span></label>
+                  <div *ngIf="name.invalid && name.touched" class="d-flex align-content-start text-danger">
+                    <div *ngIf="name.errors?.['required']">Le nom est requis</div>
+                  </div>
+                </div>
+                <div class="form-group form-floating mt-3 d-flex flex-column">
+                  <input type="email" pInputText formControlName="email" class="form-control custom-input" placeholder="Adresse email" id="floatingEmail" name="email" autocomplete="email">
+                  <label for="floatingEmail">Adresse email<span class="text-danger">*</span></label>
+                  <div *ngIf="email.invalid && email.touched" class="d-flex align-content-start text-danger">
+                    <div *ngIf="email.errors?.['required']">L'email est requis</div>
+                    <div *ngIf="email.errors?.['email']">L'email doit être valide</div>
+                  </div>
+                </div>
+                <div class="form-group form-floating mt-3 d-flex flex-column">
+                  <input type="text" pInputText formControlName="matricule" class="form-control custom-input" placeholder="Matricule" id="floatingMatricule" name="matricule">
+                  <label for="floatingMatricule">Matricule<span class="text-danger">*</span></label>
+                  <div *ngIf="matricule.invalid && matricule.touched" class="d-flex align-content-start text-danger">
+                    <div *ngIf="matricule.errors?.['required']">Le matricule est requis</div>
+                  </div>
+                </div>
+                <div class="form-group form-floating mt-3 d-flex flex-column">
+                  <input type="password" pInputText formControlName="password" class="form-control" placeholder="Mot de passe" id="floatingPassword" name="password">
+                  <label for="floatingPassword">Mot de passe<span class="text-danger">*</span></label>
+                  <div *ngIf="password.invalid && password.touched" class="d-flex align-content-start text-danger">
+                    <div *ngIf="password.errors?.['required']">Le mot de passe est requis</div>
+                  </div>
+                </div>
+                <div class="form-group form-floating mt-3 d-flex flex-column">
+                  <input type="password" pInputText formControlName="password_confirmation" class="form-control" placeholder="Confirmer le mot de passe" id="floatingCPassword" name="cpassword">
+                  <label for="floatingCPassword">Confirmer le mot de passe<span class="text-danger">*</span></label>
+                  <div *ngIf="cpassword.invalid && cpassword.touched" class="d-flex align-content-start text-danger">
+                    <div *ngIf="cpassword.errors?.['required']">La confirmation du mot de passe est requise</div>
+                  </div>
+                </div>
+                <div class="form-group justify-content-between mt-3">
+                  <button cButton type="submit" class="btn btn px-4 btn-pill btn-block" style="background-color:black;" [disabled]="!signupForm.valid">
+                    <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                    S'inscrire
+                  </button>
+                </div>
+                <div class="text-center mt-3">
+                  <span>Déjà Membre ?</span>
+                  <a routerLink="/login" class="ml-1">Connectez vous !</a>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
