--- a/Front/src/app/features/screens/acceuil/acceuil/acceuil.component.html
+++ b/Front/src/app/features/screens/acceuil/acceuil/acceuil.component.html
@@ -30,16 +30,16 @@
 
   <div class="intro-section" id="home-section">
     <div class="slide-1"
-         style="background-image: url('../../../assets/img/pexels-cottonbro-studio-6209589.jpg'); height: auto;">
+         style="background-image: url('../../../assets/img/unsplash_1nz2RyutBEE.png'); height: auto;">
       <div class="container" style="max-width: 800px; padding: 0;">
         <div class="row align-items-center">
           <div class="col-12">
             <div class="row align-items-center">
               <div class="col-lg-12 text-center mb-4">
-                <h1 data-aos="fade-up" data-aos-delay="200">Explorez Nous</h1>
-                <h1 data-aos="fade-up" data-aos-delay="100">Transformez vos requêtes en actions avec facilité grâce à
+                <h1 data-aos="fade-up" data-aos-delay="200" style="font-size:500%;">Explorez Nous</h1>
+                <h1 data-aos="fade-up" data-aos-delay="100"style="font-size:250%;">Transformez vos requêtes en actions avec facilité grâce à
                   EasyRequest</h1>
-                <p data-aos="fade-up" data-aos-delay="300" style="color: white;">Du problème à la solution, une requête à la fois.</p><br>
+                <p data-aos="fade-up" data-aos-delay="300" style="color: white;font-size: 150%;">Du problème à la solution, une requête à la fois.</p><br>
                 <a routerLink="/login" data-aos-delay="200" data-aos="fade-up" class="btn btn-primary pills"
                    style="background-color: rgb(4, 4, 4); border: none; padding: 15px 22px;">
                   <i class="material-icons" style="font-size: 24px; vertical-align: middle; margin-right: 10px;"></i>
