--- a/Front/src/app/features/screens/secretary/add-deadline/add-deadline.component.html
+++ b/Front/src/app/features/screens/secretary/add-deadline/add-deadline.component.html
@@ -9,7 +9,7 @@
     </c-alert>
     <div class="card">
       <div class="card-header">
-        <h5>Ajout d'une Deadline</h5>
+        <h5 style="font-weight: bold;">Ajout d'une Echeance</h5>
       </div>
 
       <form action="add-deadline" method="post" [formGroup]="addDeadlineForm" (ngSubmit)="saveDeadline()">
