--- a/Front/src/app/features/screens/secretary/view-deadlines/view-deadlines.component.html
+++ b/Front/src/app/features/screens/secretary/view-deadlines/view-deadlines.component.html
@@ -7,7 +7,7 @@
 <div class="col-12">
   <div class="card">
     <div class="card-header">
-      <h5>Echeances des Requetes</h5>
+      <h5 style="font-weight: bold;">Echeances des Requetes</h5>
     </div>
     <div class="card-body">
       <div class="table-responsive">
