--- a/Front/src/app/features/screens/staff/receives-request/receives-request.component.html
+++ b/Front/src/app/features/screens/staff/receives-request/receives-request.component.html
@@ -9,7 +9,7 @@
       <div class="col-12">
         <div class="card">
           <div class="card-header">
-            <h4>Requetes non valides</h4>
+            <h5 style="font-weight: bold;">Requetes non valides</h5>
           </div>
           <div class="card-body">
             <div class="table-responsive">
