--- a/Front/src/app/features/screens/student/add-individual-request/add-request.component.html
+++ b/Front/src/app/features/screens/student/add-individual-request/add-request.component.html
@@ -9,7 +9,7 @@
     </c-alert>
     <div class="card">
       <div class="card-header">
-        <h5>Creation Requête</h5>
+        <h5 style="font-weight: bold;">Creation Requête</h5>
       </div>
 
       <form action="add-individual-request" method="post" [formGroup]="requestForm" enctype="multipart/form-data"
