--- a/Front/src/app/features/screens/student/list-request/list-request.component.html
+++ b/Front/src/app/features/screens/student/list-request/list-request.component.html
@@ -12,7 +12,7 @@
 </c-alert>
 <div class="card">
   <div class="card-header">
-    <h5>liste des Requetes</h5>
+    <h5 style="font-weight: bold;">liste des Requetes</h5>
   </div>
   <div class="card-body">
     <div class="table-responsive">
