--- a/Front/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/Front/src/app/containers/default-layout/default-header/default-header.component.html
@@ -7,13 +7,13 @@
       [cSidebarToggle]="sidebarId"
       class="ps-1"
     >
-      <svg cIcon name="cilMenu" size="lg"></svg>
+      <svg cIcon name="cilMenu" size="lg" style="background-color: black;"></svg>
     </button>
-    <c-header-nav class="d-none d-lg-flex me-auto">
+    <c-header-nav class="d-none d-lg-flex ">
       <c-nav-item>
-        <a cNavLink routerLink="/dashboard" routerLinkActive="active">
+        <h5 style="font-weight: bold;">
           Dashboard
-        </a>
+        </h5>
       </c-nav-item>
     </c-header-nav>
     <c-header-nav class="ms-3">
@@ -63,7 +63,7 @@
       <li>
         <hr cDropdownDivider/>
       </li>
-      <li style="background-color: rgb(70, 70, 70)">
+      <li style="background-color: rgb(255, 255, 255)">
         <span (click)="logout()" cDropdownItem class="logout-item">
           <svg cIcon class="me-2" name="cilLockLocked"></svg>
           Deconnexion
