--- a/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
+++ b/Front/src/app/features/screens/secretary/receive-request-secretary/receive-request-secretary.component.html
@@ -5,7 +5,7 @@
 
 <div class="card">
   <div class="card-header">
-    <h4>Requetes recus</h4>
+    <h5 style="font-weight: bold;">Requetes reçus</h5>
   </div>
   <div class="card-body">
     <div class="table-responsive">
