--- a/Front/src/app/features/screens/student/show-request-student/show-request-student.component.html
+++ b/Front/src/app/features/screens/student/show-request-student/show-request-student.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="card">
   <div class="card-header"><br>
-    <h5>Detail de votre requête</h5><br>
+    <h5 style="font-weight: bold;" >Detail de votre requête</h5><br>
   </div>
 
   <div class="card-body">
