--- a/Front/src/app/features/screens/student/student-dashboard/student-dashboard.component.html
+++ b/Front/src/app/features/screens/student/student-dashboard/student-dashboard.component.html
@@ -6,7 +6,7 @@
 
 <div class="card">
   <div class="card-header">
-    <h5>Echeances des Requetes</h5>
+    <h5 style="font-weight: bold;">Echeances des Requetes</h5>
   </div>
   <div class="card-body">
     <div class="table-responsive">
