added icons to dashboard item and updates redireckt link for attachement

--- a/Front/src/app/features/screens/acceuil/acceuil/acceuil.component.html
+++ b/Front/src/app/features/screens/acceuil/acceuil/acceuil.component.html
@@ -30,7 +30,7 @@
 
   <div class="intro-section" id="home-section">
     <div class="slide-1"
-         style="background-image: url('../../../assets/img/unsplash_1nz2RyutBEE.png'); height: auto;">
+         style="background-image: url('./assets/img/pexels-cottonbro-studio-6209589.jpg'); height: auto;">
       <div class="container" style="max-width: 800px; padding: 0;">
         <div class="row align-items-center">
           <div class="col-12">
