--- a/Front/src/app/features/screens/secretary/show-request-secretary/show-request-secretary.component.html
+++ b/Front/src/app/features/screens/secretary/show-request-secretary/show-request-secretary.component.html
@@ -24,7 +24,7 @@
             <tr>
               <td>{{ userData?.nom }}</td>
               <td>{{ userData?.matricule }}</td>
-              <td>{{ request.title  }}</td>
+              <td>{{ request.title }}</td>
               <td>{{ request.created_at | date: 'dd-MM-yyyy' }}</td>
             </tr>
           </table>
@@ -51,7 +51,7 @@
   <div class="row mt-4">
     <div class="col-md-12">
       <p class="section-lead"><span
-        style="font-weight: bold;">Objet  :</span> {{  request.title  }}</p><br>
+        style="font-weight: bold;">Objet  :</span> {{ request.title }}</p><br>
       <p class="section-lead"><span style="font-weight: bold;">Intitulé : </span> {{ request?.title }} <br></p>
       <p class="section-lead"><span style="font-weight: bold;">Contenu : </span> {{ request?.content }} <br></p>
       <div class="row mt-4">
@@ -60,10 +60,15 @@
           <ng-container *ngIf="request.attachments && request.attachments.length > 0; else noAttachments">
             <p class="section-lead" *ngFor="let attachment of request.attachments; let i = index">
               <!-- Utiliser un lien stylisé comme un bouton -->
-              <a class="btn btn-info" [href]="redirectLink?.getAttachmentUrl(attachment.file_path)" target="_blank" role="button" data-toggle="tooltip" data-placement="top" title="Voir la pièce jointe">
+              <a class="btn btn-info"
+                 (click)="this.utils?.getAttachmentUrl(attachment.file_path)"
+                 target="_blank"
+                 role="button"
+                 data-toggle="tooltip"
+                 data-placement="top"
+                 title="Voir la pièce jointe">
                 Pièce {{ i + 1 }}
               </a>
-
             </p>
           </ng-container>
 
@@ -83,16 +88,16 @@
         <strong>{{ message }}</strong>
       </c-alert>
       <div class="float-lg-left mb-lg-0 mb-3">
-          <button class="btn btn-success" (click)="transferringRequest()" style="font-size: 12px;">
-            <span *ngIf="isLoading1" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-            Transferer
-          </button>&nbsp;&nbsp;
-          <button class="btn btn-danger" (click)="rejectRequest()" style="font-size: 12px;">
-            <span *ngIf="isLoading2" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-            Rejeter
-          </button>
-        </div>
+        <button class="btn btn-success" (click)="transferringRequest()" style="font-size: 12px;">
+          <span *ngIf="isLoading1" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+          Transferer
+        </button>&nbsp;&nbsp;
+        <button class="btn btn-danger" (click)="rejectRequest()" style="font-size: 12px;">
+          <span *ngIf="isLoading2" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+          Rejeter
+        </button>
       </div>
     </div>
   </div>
-  <hr/>
+</div>
+<hr/>
