--- a/Front/src/app/views/pages/login/login.component.html
+++ b/Front/src/app/views/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="intro-section" id="home-section">
 
   <div class="slide-1"
-       style="background-image: url('../../../assets/img/pexels-askar-abayev-6193638.jpg'); height: auto;">
+       style="background-image: url('./assets/img/pexels-charlotte-may-5965930.jpg'); height: auto;">
     <div class="container" style="max-width: 600px; padding: 10px; ">
       <div class="row align-items-center">
         <div class="col-12">
