--- a/Front/src/app/containers/default-layout/default-header/default-header.component.html
+++ b/Front/src/app/containers/default-layout/default-header/default-header.component.html
@@ -7,7 +7,7 @@
       [cSidebarToggle]="sidebarId"
       class="ps-1"
     >
-      <svg cIcon name="cilMenu" size="lg" style="background-color: black;"></svg>
+      <svg cIcon name="cilMenu" size="lg"></svg>
     </button>
     <c-header-nav class="d-none d-lg-flex ">
       <c-nav-item>
